--- a/app/views/main/tequila.html.erb
+++ b/app/views/main/tequila.html.erb
@@ -5,7 +5,15 @@
 
 <h1 class="menu-title">Tequilas</h1>
 
-<%= image_tag 'tequila.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-sm-9">
+
+
+<%= image_tag 'tequila.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <h2 class="menu-head">Blanco (White)</h2>
 
@@ -135,11 +143,27 @@
 
 <h1 class="menu-title">Spirits</h1>
 
-<%= image_tag 'spirit.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-sm-9">
+
+
+<%= image_tag 'spirit.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <h2 class="menu-head">Vodka</h2>
 
-<%= image_tag 'vodka.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-sm-9">
+
+
+<%= image_tag 'vodka.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <div class="container">
 	<div class="row">
@@ -158,7 +182,15 @@
 
 <h2 class="menu-head"> Rum</h2>
 
-<%= image_tag 'rum.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-4"></div>
+  <div class="col-sm-6">
+
+
+<%= image_tag 'rum.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <div class="container">
 	<div class="row">
@@ -178,7 +210,15 @@
 
 <h2 class="menu-head">Gin</h2>
 
-<%= image_tag 'gin.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-4"></div>
+  <div class="col-sm-6">
+
+
+<%= image_tag 'gin.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <div class="container">
 	<div class="row">
@@ -198,7 +238,15 @@
 
 <h2 class="menu-head"> Bourbon / Whiskey</h2>
 
-<%= image_tag 'whiskey.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-4"></div>
+  <div class="col-sm-6">
+
+
+<%= image_tag 'whiskey.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <div class="container">
 	<div class="row">
@@ -218,7 +266,15 @@
 
 <h2 class="menu-head">Scotch</h2>
 
-<%= image_tag 'scotch.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-4"></div>
+  <div class="col-sm-6">
+
+
+<%= image_tag 'scotch.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <div class="container">
 	<div class="row">
@@ -238,7 +294,6 @@
 
 <h2 class="menu-head">Liqueurs & Cordials</h2>
 
-<%= image_tag 'liqueur.jpg', class: 'menu-photo' %>
 
 <div class="container">
 	<div class="row">
@@ -258,7 +313,15 @@
 
 <h1 class="menu-title"> Beer</h1>
 
-<%= image_tag 'beer.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-4"></div>
+  <div class="col-sm-6">
+
+
+<%= image_tag 'beer.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <div class="row">
   <div class="col-sm-6">
@@ -315,13 +378,29 @@
 
 <h1 class= "menu-head"> MICHELADA</h1>
 
+<div class="row">
+  <div class="col-sm-4"></div>
+  <div class="col-sm-6">
+
+
 <%= image_tag 'michelada.jpg', class: 'menu-photo' %>
+
+</div>
+</div>
 
   <p class="michelada"> Made With Sangarita Lime Juice Hot Sauce and Your Favorite Beer</P>
 
 <h2 class="menu-title"> Wine</h2>
 
-<%= image_tag 'wine.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-4"></div>
+  <div class="col-sm-6">
+
+
+<%= image_tag 'wine.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <div class="row">
   <div class="col-sm-6">
@@ -376,7 +455,6 @@
 
 <h2 class="menu-title"> Sangria</h2>
 
-<%= image_tag 'sangria.jpg', class: 'menu-photo' %>
 
 <div class="row">
   <div class="col-sm-6">
@@ -416,7 +494,6 @@
 
 <h2 class="menu-title">House Margaritas</h2>
 
-<%= image_tag 'margarita.jpg', class: 'menu-photo' %>
 
 <div class="container">
 	<div class="row">
@@ -439,7 +516,15 @@
 
 <h2 class="menu-head"> Bebidas (Drinks)</h2>
 
-<%= image_tag 'drink.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-sm-9">
+
+
+<%= image_tag 'drink.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <div class="container">
   <div class="row">
