added photo and about us link

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -44,9 +44,16 @@
     <span class="sr-only">Toggle Dropdown</span>
   </button>
   <div class="dropdown-menu">
+      <%= link_to "Contact", contact_path, class: "dropdown-item" %>
     <%= link_to "Apply", apply_path, class: "dropdown-item"%>
 
+
 </div>
+
+    <li class="nav-item">
+      <%= link_to "About Us", about_path, class: "btn btn-primary" %>
+
+    </li>
 
 
 
