--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -15,7 +15,7 @@
 
       <div class="card text-center">
         <div class="card block">
-          <p class="card-text">507 Broad Street
+          <p class="card-text">507 Broad Street</br>
 Chattanooga, TN 37402</p>
 
       <a class="btn btn-warning btn-xlg" href="https://www.google.com/maps/place/507+Broad+St,+Chattanooga,+TN+37402/@35.050631,-85.311094,14z/data=!4m5!3m4!1s0x88605e6253590e9f:0x58dc5c4652d15155!8m2!3d35.0506313!4d-85.3110936?hl=en-US" >
@@ -87,8 +87,15 @@ Chattanooga, TN 37402</p>
 
 </div>
 
-<h1 class="menu-head">In the mood for something else?</h1>
+<div class="row">
+<div class="col-sm-1"></div>
+    <div class="col-sm-10">
 
+
+<h1 class="menu-head">Try one of our Partner restaurants!</h1>
+
+</div>
+</div>
 
 <div class="row">
 <div class="col-sm-4"></div>
