ammended jpeg to jpg

--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -38,5 +38,6 @@
 </div>
 </div>
 
-<%= image_tag 'deals.jpeg', class: 'img-fluid' %>
-
+<div>
+<%= image_tag 'deals.jpg', class: 'img-fluid' %>
+</div>
