--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -38,6 +38,10 @@
 </div>
 </div>
 
-<div>
+  <div class="col-sm-3"></div>
+  <div class="col-sm-6">
+
 <%= image_tag 'deals.jpg', class: 'img-fluid' %>
+
+</div>
 </div>
