made photos on home page device width

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -338,3 +338,7 @@ border-radius: 25px;
     background-color: #555; /* Add a dark-grey background on hover */
 }
 
+#home-photo {
+  width: 100%;
+  height: 450px;
+}
