added photos, increased size of carousel, added new applicaions

--- a/app/views/main/apply.html.erb
+++ b/app/views/main/apply.html.erb
@@ -13,6 +13,9 @@
 
 
 
-<%= link_to 'Download Application', main_download_pdf_url, class: 'btn btn-primary coll center-block', id: 'apply-btn' %>
+<%= link_to 'Download English Application', main_download_pdf_url, class: 'btn btn-warning coll center-block', id: 'apply-btn' %>
+
+<%= link_to 'Download Spanish Application', main_download_pdf1_url, class: 'btn btn-warning coll center-block', id: 'apply-btn' %>
+
 </div>
 </div>
