--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -16,6 +16,8 @@
       <div><%= image_tag 'carousel05.jpg', class: 'img-fluid', id: 'home-photo' %></div>
       <div><%= image_tag 'carousel06.jpg', class: 'img-fluid', id: 'home-photo' %></div>
       <div><%= image_tag 'carousel07.jpg', class: 'img-fluid', id: 'home-photo' %></div>
+      <div><%= image_tag 'carousel08.png', class: 'img-fluid', id: 'home-photo' %></div>
+
     </div>
 
 
@@ -33,6 +35,6 @@
     </script>
 
 
-
-<%= image_tag 'deals.jpg', class: 'img-fluid', id: 'home-photo' %>
+<a href="/menu">
+<%= image_tag 'deals.jpg', class: 'img-fluid', id: 'home-photo' %></a>
 
