--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -340,5 +340,9 @@ border-radius: 25px;
 
 #home-photo {
   width: 100%;
-  height: 450px;
+  height: 500px;
+}
+
+#apply-btn {
+  margin-bottom: 15px;
 }
