--- a/app/views/main/menu.html.erb
+++ b/app/views/main/menu.html.erb
@@ -44,7 +44,7 @@
 <div class="col-md-6 col-lg-4">
 
     <div class="card text-center">
-    <%= image_tag 'apps.jpg', class: 'menu-group' %>
+    <%= image_tag 'brunch.jpg', class: 'menu-group' %>
 
 </div>
 
