--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -97,18 +97,10 @@ Chattanooga, TN 37402</p>
 </div>
 </div>
 
-<div class="row">
-<div class="col-sm-5"></div>
-    <div class="col-sm-4">
-
+   <div class="text-center">
       <a class="btn btn-warning btn-xlg" href="https://www.google.com/maps/place/901+Carter+St,+Chattanooga,+TN+37402/@35.0452713,-85.3146306,17z/data=!3m1!4b1!4m5!3m4!1s0x88605e7d7312f895:0xd9d4db230dc39b77!8m2!3d35.0452713!4d-85.3124419" style="padding-left:15px;" target="_blank">
           Visit City Cafe Diner 
           </a>    
 
 
-
 </div>
-
-
-
-</body>
