--- a/app/views/main/menu.html.erb
+++ b/app/views/main/menu.html.erb
@@ -73,7 +73,7 @@
 </div>
 
 
-<div class="col-md-6 col-sm-3">
+<div class="col-md-6 col-lg-4">
 
     <div class="card text-center">
     <%= image_tag 'apps.jpg', class: 'menu-group' %>
@@ -89,7 +89,7 @@
 </div>
 </div>
 
-<div class="col-md-6 col-sm-3">
+<div class="col-md-6 col-lg-4">
 
     <div class="card text-center">
     <%= image_tag 'tequila.jpg', class: 'menu-group' %>
