stopped puasing carousel

--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -26,7 +26,9 @@
         $('.carousel').slick({
             infinite: true,
             autoplay: true,
-            autoplaySpeed: 5000,
+            autoplaySpeed: 0,
+            speed: 5000,
+            pauseOnHover: false,
             arrows: false,
             fade: true,
             slidesToShow: 1,
