--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,7 @@
 
 body {
 
+  padding-right: 10px;
   padding-left: 10px;
     background: black; 
     /* For browsers that do not support gradients */
