--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -10,7 +10,9 @@
 
 
     <div class="carousel">
-      <div><%= image_tag 'carousel02.jpg', class: 'img-fluid', id: 'home-photo' %></div>
+      <div class="slide slide--has-caption slick-slide">
+><%= image_tag 'carousel02.jpg', class: 'img-fluid', id: 'home-photo' %><div class="slide__caption">NOT YOUR AVERAGE LATIN RESTAURANT</div>
+</div>
       <div><%= image_tag 'carousel03.jpg', class: 'img-fluid', id: 'home-photo' %></div>
       <div><%= image_tag 'carousel04.jpg', class: 'img-fluid', id: 'home-photo' %></div>
       <div><%= image_tag 'carousel05.jpg', class: 'img-fluid', id: 'home-photo' %></div>
@@ -25,7 +27,7 @@
       $(document).ready(function(){
         $('.carousel').slick({
             infinite: true,
-            autoplay: true,
+            autoplay: false,
             autoplaySpeed: 0,
             speed: 5000,
             pauseOnHover: false,
