removed extra bracket

--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -11,7 +11,7 @@
 
     <div class="carousel">
       <div class="slide slide--has-caption slick-slide">
-><%= image_tag 'carousel02.jpg', class: 'img-fluid', id: 'home-photo' %><div class="slide__caption">NOT YOUR AVERAGE LATIN RESTAURANT</div>
+<%= image_tag 'carousel02.jpg', class: 'img-fluid', id: 'home-photo' %><div class="slide__caption">NOT YOUR AVERAGE LATIN RESTAURANT</div>
 </div>
       <div><%= image_tag 'carousel03.jpg', class: 'img-fluid', id: 'home-photo' %></div>
       <div><%= image_tag 'carousel04.jpg', class: 'img-fluid', id: 'home-photo' %></div>
