played with font

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -353,8 +353,9 @@ border-radius: 25px;
 }
 
 .slide__caption {
-  font: 100 45px/1.5 'Oswald', Helvetica, sans-serif;
+  font: 100 45px/1.5 'Oswald', sans-serif;
   color: white;
+  font-weight: bold;
   bottom: 0;
   min-height: 370px;
   left: 260px;
