--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -27,9 +27,9 @@
       $(document).ready(function(){
         $('.carousel').slick({
             infinite: true,
-            autoplay: false,
-            autoplaySpeed: 0,
-            speed: 5000,
+            autoplay: true,
+            autoplaySpeed: 5000,
+            speed: 7000,
             pauseOnHover: false,
             arrows: false,
             fade: true,
