--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -9,16 +9,16 @@
 <body>
 
 
-    <div class="carousel">
+    <div class="carousel ">
       <div class="slide slide--has-caption slick-slide">
 <%= image_tag 'carousel02.jpg', class: 'img-fluid', id: 'home-photo' %><div class="slide__caption">NOT YOUR AVERAGE LATIN RESTAURANT</div>
 </div>
-      <div><%= image_tag 'carousel03.jpg', class: 'img-fluid', id: 'home-photo' %></div>
-      <div><%= image_tag 'carousel04.jpg', class: 'img-fluid', id: 'home-photo' %></div>
-      <div><%= image_tag 'carousel05.jpg', class: 'img-fluid', id: 'home-photo' %></div>
-      <div><%= image_tag 'carousel06.jpg', class: 'img-fluid', id: 'home-photo' %></div>
-      <div><%= image_tag 'carousel07.jpg', class: 'img-fluid', id: 'home-photo' %></div>
-      <div><%= image_tag 'carousel08.png', class: 'img-fluid', id: 'home-photo' %></div>
+      <div><%= image_tag 'carousel03.jpg', class: 'img-fluid', id: 'home-photo' %><div class="slide__caption">NOT YOUR AVERAGE LATIN RESTAURANT</div></div>
+      <div><%= image_tag 'carousel04.jpg', class: 'img-fluid', id: 'home-photo' %><div class="slide__caption">NOT YOUR AVERAGE LATIN RESTAURANT</div></div>
+      <div><%= image_tag 'carousel05.jpg', class: 'img-fluid', id: 'home-photo' %><div class="slide__caption">NOT YOUR AVERAGE LATIN RESTAURANT</div></div>
+      <div><%= image_tag 'carousel06.jpg', class: 'img-fluid', id: 'home-photo' %><div class="slide__caption">NOT YOUR AVERAGE LATIN RESTAURANT</div></div>
+      <div><%= image_tag 'carousel07.jpg', class: 'img-fluid', id: 'home-photo' %><div class="slide__caption">NOT YOUR AVERAGE LATIN RESTAURANT</div></div>
+      <div><%= image_tag 'carousel08.png', class: 'img-fluid', id: 'home-photo' %><div class="slide__caption">NOT YOUR AVERAGE LATIN RESTAURANT</div></div>
 
     </div>
 
@@ -29,7 +29,7 @@
             infinite: true,
             autoplay: true,
             autoplaySpeed: 5000,
-            speed: 7000,
+            speed: 3000,
             pauseOnHover: false,
             arrows: false,
             fade: true,
