--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -11,14 +11,14 @@
 
     <div class="carousel ">
       <div class="slide slide--has-caption slick-slide">
-<%= image_tag 'carousel02.jpg', class: 'img-fluid', id: 'home-photo' %><div class="slide__caption">NOT YOUR AVERAGE LATIN RESTAURANT</div>
+<%= image_tag 'carousel02.jpg', class: 'img-fluid', id: 'home-photo' %><div class="slide__caption">A WHOLE NEW LATIN EXPERIENCE</div>
 </div>
-      <div><%= image_tag 'carousel03.jpg', class: 'img-fluid', id: 'home-photo' %><div class="slide__caption">NOT YOUR AVERAGE LATIN RESTAURANT</div></div>
-      <div><%= image_tag 'carousel04.jpg', class: 'img-fluid', id: 'home-photo' %><div class="slide__caption">NOT YOUR AVERAGE LATIN RESTAURANT</div></div>
-      <div><%= image_tag 'carousel05.jpg', class: 'img-fluid', id: 'home-photo' %><div class="slide__caption">NOT YOUR AVERAGE LATIN RESTAURANT</div></div>
-      <div><%= image_tag 'carousel06.jpg', class: 'img-fluid', id: 'home-photo' %><div class="slide__caption">NOT YOUR AVERAGE LATIN RESTAURANT</div></div>
-      <div><%= image_tag 'carousel07.jpg', class: 'img-fluid', id: 'home-photo' %><div class="slide__caption">NOT YOUR AVERAGE LATIN RESTAURANT</div></div>
-      <div><%= image_tag 'carousel08.png', class: 'img-fluid', id: 'home-photo' %><div class="slide__caption">NOT YOUR AVERAGE LATIN RESTAURANT</div></div>
+      <div><%= image_tag 'carousel03.jpg', class: 'img-fluid', id: 'home-photo' %><div class="slide__caption">A WHOLE NEW LATIN EXPERIENCE</div></div>
+      <div><%= image_tag 'carousel04.jpg', class: 'img-fluid', id: 'home-photo' %><div class="slide__caption">A WHOLE NEW LATIN EXPERIENCE</div></div>
+      <div><%= image_tag 'carousel05.jpg', class: 'img-fluid', id: 'home-photo' %><div class="slide__caption">A WHOLE NEW LATIN EXPERIENCE</div></div>
+      <div><%= image_tag 'carousel06.jpg', class: 'img-fluid', id: 'home-photo' %><div class="slide__caption">A WHOLE NEW LATIN EXPERIENCE</div></div>
+      <div><%= image_tag 'carousel07.jpg', class: 'img-fluid', id: 'home-photo' %><div class="slide__caption">A WHOLE NEW LATIN EXPERIENCE</div></div>
+      <div><%= image_tag 'carousel08.png', class: 'img-fluid', id: 'home-photo' %><div class="slide__caption">A WHOLE NEW LATIN EXPERIENCE</div></div>
 
     </div>
 
