--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,9 @@
-
 <div class="mayan-head">
+
+<div class="text-center">
+  <%= image_tag "alogo.jpg" %>
+</div>
+
 <nav class="navbar navbar-expand-sm navbar-dark" style="background: none; color: white;">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span>
