changed logo formatting

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -316,7 +316,7 @@ border-radius: 25px;
 }
 
 .mayan-head {
-  background: black;
+  background: #181617;
   font: Helvetica;
 }
 
@@ -362,4 +362,8 @@ border-radius: 25px;
   position: absolute;
   width: 100%;
   z-index: 2;
+}
+
+.top-logo {
+  width: 50%
 }
