--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="mayan-head">
 
 <div class="text-center">
-  <%= image_tag "alogo.jpg" %>
+  <%= image_tag "alogo.jpg", class: 'top-logo' %>
 </div>
 
 <nav class="navbar navbar-expand-sm navbar-dark" style="background: none; color: white;">
