added about us content

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -55,7 +55,7 @@
 </div>
 
     <li class="nav-item">
-      <%= link_to "About Us", about_path, class: "btn btn-primary" %>
+      <%= link_to "Our Story", about_path, class: "btn btn-primary" %>
 
     </li>
 
