changed pixels to percentage in css for overlay

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -357,8 +357,8 @@ border-radius: 25px;
   color: white;
   font-weight: bold;
   bottom: 0;
-  min-height: 370px;
-  left: 260px;
+  min-height: 50%;
+  left: 20%;
   position: absolute;
   width: 100%;
   z-index: 2;
