--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -40,5 +40,5 @@
 
 
 <a href="/menu">
-<%= image_tag 'deals.jpg', class: 'img-fluid', id: 'home-wall' %></a>
+<%= image_tag 'deals.jpg', class: 'img-fluid', id: 'home-photo' %></a>
 
