added brunch photos

--- a/app/views/main/brunch.html.erb
+++ b/app/views/main/brunch.html.erb
@@ -8,14 +8,10 @@
 
 <h2 class="menu-head"> Huevos (Eggs)</h2>
 
-<div class="row">
-  <div class="col-sm-4"></div>
-  <div class="col-sm-8">
-
+<div class="text-center">
 
 <%= image_tag 'egg.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
@@ -36,14 +32,9 @@
 
 <h2 class="menu-head"> Sartenes (Skillets)</h2>
 
-<div class="row">
-  <div class="col-sm-4"></div>
-  <div class="col-sm-8">
-
-
+<div class="text-center">
 <%= image_tag 'skillet.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
@@ -64,14 +55,9 @@
 
 <h2 class="menu-head"> De La Plancha (Griddle)</h2>
 
-<div class="row">
-  <div class="col-sm-5"></div>
-  <div class="col-sm-6">
-
-
+<div class="text-center">
 <%= image_tag 'griddle.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
@@ -92,14 +78,9 @@
 
 <h2 class="menu-head"> Tortillas De Huevo </br> (Omelettes)</h2>
 
-<div class="row">
-  <div class="col-sm-4"></div>
-  <div class="col-sm-6">
-
-
+<div class="text-center">
 <%= image_tag 'omelette.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
@@ -120,14 +101,9 @@
 
 <h2 class="menu-head"> Brunch Sides</h2>
 
-<div class="row">
-  <div class="col-sm-4"></div>
-  <div class="col-sm-8">
-
-
+<div class="text-center">
 <%= image_tag 'brunch-side.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
@@ -148,14 +124,10 @@
 
 <h2 class="menu-head"> Bebidas (Drinks)</h2>
 
-<div class="row">
-  <div class="col-sm-3"></div>
-  <div class="col-sm-9">
-
+<div class="text-center">
 
 <%= image_tag 'drink.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
