--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -358,7 +358,7 @@ border-radius: 25px;
   font-weight: bold;
   bottom: 0;
   min-height: 50%;
-  left: 15%;
+  left: 0;
   position: absolute;
   width: 100%;
   text-size-adjust: 45%;
