test menu buttons

--- a/app/views/main/menu.html.erb
+++ b/app/views/main/menu.html.erb
@@ -13,14 +13,14 @@
     <div class="card text-center">
     <%= image_tag 'steak.jpg', class: 'menu-group' %>
 </div>
-<div class="row">
-  <div class="col-sm-5"></div>
-      <div class="card-block-menu">
+
+<div class="text-center">
+  <div class="card-block-menu">
+
       <%= link_to "Dinner", dinner_path, class: "btn btn-danger btn-rounded" %>
   </div>
 </div>
 </div>
-
 
 
 <div class="col-md-6 col-lg-4">
@@ -30,10 +30,8 @@
 
 </div>
 
-<div class="row">
-  <div class="col-sm-5"></div>
-
-      <div class="card-block-menu">
+<div class="text-center">      
+  <div class="card-block-menu">
       <%= link_to "Lunch", lunch_path, class: "btn btn-danger" %>
     </div>
  
@@ -48,9 +46,7 @@
 
 </div>
 
-<div class="row">
-  <div class="col-sm-5"></div>
-
+<div class="text-center">
       <div class="card-block-menu">
       <%= link_to "Brunch", brunch_path, class: "btn btn-danger" %>
     </div>
@@ -63,8 +59,7 @@
     <%= image_tag 'desserts.jpg', class: 'menu-group' %>
 </div>
 
-<div class="row">
-  <div class="col-sm-5"></div>
+<div class="text-center">
       <div class="card-block-menu">
       <%= link_to "Desserts", dessert_path, class: "btn btn-danger" %>
   </div>
@@ -79,9 +74,7 @@
     <%= image_tag 'snack.jpg', class: 'menu-group' %>
 </div>
 
-<div class="row">
-  <div class="col-sm-4"></div>
-
+<div class="text-center">
 
       <div class="card-block-menu">
       <%= link_to "Appetizers", apps_path, class: "btn btn-danger" %>
