centered dinner menu

--- a/app/views/main/dinner.html.erb
+++ b/app/views/main/dinner.html.erb
@@ -4,13 +4,10 @@
 
 <h2 class="menu-head">Bisteks (Steaks)</h2>
 
-<div class="row">
-  <div class="col-sm-3"></div>
-  <div class="col-sm-9">
+  <div class="text-center">
 
 <%= image_tag 'steak.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
@@ -31,13 +28,12 @@
 
 <h2 class="menu-head">Pollo (Chicken)</h2>
 
-<div class="row">
-  <div class="col-sm-3"></div>
-  <div class="col-sm-9">
+
+  <div class="text-center">
+
 
 <%= image_tag 'chicken.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
@@ -58,13 +54,10 @@
 
 <h2 class="menu-head">Cerdo (Pork)</h2>
 
-<div class="row">
-  <div class="col-sm-4"></div>
-  <div class="col-sm-8">
+  <div class="text-center">
 
 <%= image_tag 'pork.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
@@ -86,13 +79,10 @@
 
 <h2 class="menu-head">Mariscos (Seafood)</h2>
 
-<div class="row">
-  <div class="col-sm-3"></div>
-  <div class="col-sm-9">
+  <div class="text-center">
 
 <%= image_tag 'seafood.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
@@ -114,13 +104,10 @@
 
 <h2 class="menu-head">Side Dishes</h2>
 
-<div class="row">
-  <div class="col-sm-4"></div>
-  <div class="col-sm-8">
+  <div class="text-center">
 
 <%= image_tag 'side.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
@@ -141,24 +128,18 @@
 
 <h1 class="menu-title"> Otras Especilidades </br> (Other Specialties)</h1>
 
-<div class="row">
-  <div class="col-sm-3"></div>
-  <div class="col-sm-9">
+  <div class="text-center">
 
 <%= image_tag 'special.jpg', class: 'img-fluid' %>
 
 </div>
-</div>
 
 <h2 class="menu-head">Fajitas</h2>
 
-<div class="row">
-  <div class="col-sm-5"></div>
-  <div class="col-sm-6">
+  <div class="text-center">
 
 <%= image_tag 'fajita.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
@@ -180,13 +161,10 @@
 
 <h2 class="menu-head">Chimichangas</h2>
 
-<div class="row">
-  <div class="col-sm-3"></div>
-  <div class="col-sm-9">
+  <div class="text-center">
 
 <%= image_tag 'chimichanga.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
@@ -207,13 +185,10 @@
 
 <h2 class="menu-head">Tacos</h2>
 
-<div class="row">
-  <div class="col-sm-4"></div>
-  <div class="col-sm-8">
+  <div class="text-center">
 
 <%= image_tag 'taco.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
@@ -234,13 +209,10 @@
 
 <h2 class="menu-head">Quesadillas</h2>
 
-<div class="row">
-  <div class="col-sm-4"></div>
-  <div class="col-sm-6">
+  <div class="text-center">
 
 <%= image_tag 'quesadilla.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
@@ -261,14 +233,11 @@
 
 <h2 class="menu-head">Enchiladas</h2>
 
-<div class="row">
-  <div class="col-sm-3"></div>
-  <div class="col-sm-9">
+  <div class="text-center">
 
 
 <%= image_tag 'enchilada.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
@@ -289,13 +258,10 @@
 
 <h2 class="menu-head"> Bebidas (Drinks)</h2>
 
-<div class="row">
-  <div class="col-sm-3"></div>
-  <div class="col-sm-9">
+  <div class="text-center">
 
 <%= image_tag 'drink.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
