centered rest of menus

--- a/app/views/main/lunch.html.erb
+++ b/app/views/main/lunch.html.erb
@@ -8,14 +8,11 @@
 <h1 class="menu-title">Lunch Specials</h1>
 <h2 class="menu-head"> Served Monday - Friday 11AM - 3PM</h2>
 
-<div class="row">
-  <div class="col-sm-4"></div>
-  <div class="col-sm-6">
+  <div class="text-center">
 
 
 <%= image_tag 'lunchs.jpg', class: 'menu-photo' %>
 
-</div>
 </div>
 
 <div class="container">
@@ -36,14 +33,11 @@
 
 <h2 class="menu-head"> Bebidas (Drinks)</h2>
 
-<div class="row">
-  <div class="col-sm-3"></div>
-  <div class="col-sm-9">
+  <div class="text-center">
 
 
 <%= image_tag 'drink.jpg', class: 'menu-photo' %>
 
-</div>
 </div>
 
 <div class="container">
