--- a/app/views/main/tequila.html.erb
+++ b/app/views/main/tequila.html.erb
@@ -5,14 +5,11 @@
 
 <h1 class="menu-title">Tequilas</h1>
 
-<div class="row">
-  <div class="col-sm-3"></div>
-  <div class="col-sm-9">
+  <div class="text-center">
 
 
 <%= image_tag 'tequila.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <h2 class="menu-head">Blanco (White)</h2>
@@ -143,26 +140,20 @@
 
 <h1 class="menu-title">Spirits</h1>
 
-<div class="row">
-  <div class="col-sm-3"></div>
-  <div class="col-sm-9">
+  <div class="text-center">
 
 
 <%= image_tag 'spirit.jpg', class: 'img-fluid' %>
 
 </div>
-</div>
 
 <h2 class="menu-head">Vodka</h2>
 
-<div class="row">
-  <div class="col-sm-1"></div>
-  <div class="col-sm-9">
+  <div class="text-center">
 
 
 <%= image_tag 'vodka.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
@@ -182,14 +173,11 @@
 
 <h2 class="menu-head"> Rum</h2>
 
-<div class="row">
-  <div class="col-sm-4"></div>
-  <div class="col-sm-6">
+  <div class="text-center">
 
 
 <%= image_tag 'rum.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
@@ -210,14 +198,10 @@
 
 <h2 class="menu-head">Gin</h2>
 
-<div class="row">
-  <div class="col-sm-4"></div>
-  <div class="col-sm-6">
-
+  <div class="text-center">
 
 <%= image_tag 'gin.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
@@ -238,14 +222,11 @@
 
 <h2 class="menu-head"> Bourbon / Whiskey</h2>
 
-<div class="row">
-  <div class="col-sm-4"></div>
-  <div class="col-sm-6">
+  <div class="text-center">
 
 
 <%= image_tag 'whiskey.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
@@ -266,14 +247,10 @@
 
 <h2 class="menu-head">Scotch</h2>
 
-<div class="row">
-  <div class="col-sm-4"></div>
-  <div class="col-sm-6">
-
+  <div class="text-center">
 
 <%= image_tag 'scotch.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
@@ -313,14 +290,11 @@
 
 <h1 class="menu-title"> Beer</h1>
 
-<div class="row">
-  <div class="col-sm-4"></div>
-  <div class="col-sm-6">
+  <div class="text-center">
 
 
 <%= image_tag 'beer.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="row">
@@ -378,28 +352,21 @@
 
 <h1 class= "menu-head"> MICHELADA</h1>
 
-<div class="row">
-  <div class="col-sm-4"></div>
-  <div class="col-sm-6">
-
+  <div class="text-center">
 
 <%= image_tag 'michelada.jpg', class: 'menu-photo' %>
 
-</div>
 </div>
 
   <p class="michelada"> Made With Sangarita Lime Juice Hot Sauce and Your Favorite Beer</P>
 
 <h2 class="menu-title"> Wine</h2>
 
-<div class="row">
-  <div class="col-sm-4"></div>
-  <div class="col-sm-6">
+  <div class="text-center">
 
 
 <%= image_tag 'wine.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="row">
@@ -516,14 +483,11 @@
 
 <h2 class="menu-head"> Bebidas (Drinks)</h2>
 
-<div class="row">
-  <div class="col-sm-3"></div>
-  <div class="col-sm-9">
+  <div class="text-center">
 
 
 <%= image_tag 'drink.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
