--- a/app/views/main/appetizer.html.erb
+++ b/app/views/main/appetizer.html.erb
@@ -8,14 +8,11 @@
 
 <h2 class="menu-head">Antojiotos (Appetizers)</h2>
 
-<div class="row">
-  <div class="col-sm-4"></div>
-  <div class="col-sm-6">
+  <div class="text-center">
 
 
 <%= image_tag 'appetizer.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
@@ -36,14 +33,11 @@
 
 <h2 class="menu-head">Tapas</h2>
 
-<div class="row">
-  <div class="col-sm-3"></div>
-  <div class="col-sm-9">
+  <div class="text-center">
 
 
 <%= image_tag 'tapas.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
@@ -65,14 +59,11 @@
 
 <h2 class="menu-head">Sopas (Soups)</h2>
 
-<div class="row">
-  <div class="col-sm-4"></div>
-  <div class="col-sm-6">
+  <div class="text-center">
 
 
 <%= image_tag 'soup.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <h4 id="nacho">Cup $4.00 Bowl $6.00</h4>
@@ -96,14 +87,11 @@
 
 <h2 class="menu-head">Favorite Dips</h2>
 
-<div class="row">
-  <div class="col-sm-3"></div>
-  <div class="col-sm-9">
+  <div class="text-center">
 
 
 <%= image_tag 'dips.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <h4 id="nacho">Served with Tri Color Tortilla Chips</h4>
@@ -126,14 +114,11 @@
 
 <h2 class="menu-head">Nachos</h2>
 
-<div class="row">
-  <div class="col-sm-4"></div>
-  <div class="col-sm-6">
+  <div class="text-center">
 
 
 <%= image_tag 'nacho.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
@@ -155,14 +140,11 @@
 
 <h2 class="menu-head">Ensaladas (Salads)</h2>
 
-<div class="row">
-  <div class="col-sm-3"></div>
-  <div class="col-sm-9">
+  <div class="text-center">
 
 
 <%= image_tag 'salad.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
