--- a/app/views/main/dessert.html.erb
+++ b/app/views/main/dessert.html.erb
@@ -5,14 +5,10 @@
 
 <h1 class="menu-title">Postres (Desserts)</h1>
 
-<div class="row">
-  <div class="col-sm-4"></div>
-  <div class="col-sm-6">
-
+  <div class="text-center">
 
 <%= image_tag 'dessert.jpg', class: 'img-fluid' %>
 
-</div>
 </div>
 
 <div class="container">
