--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -371,6 +371,9 @@ border-radius: 25px;
 
 @media only screen and (max-width: 800px) {
   #home-photo {
-  width: 100%;
+  height: 350px;
+  }
+  .img-fluid {
+  height: 300px;
   }
 }
