--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -371,7 +371,8 @@ border-radius: 25px;
 
 @media only screen and (max-width: 800px) {
   #home-photo {
-  height: 350px;
+  width: 100%;
+  height: auto;
   }
   .img-fluid {
   height: 300px;
