removed other specials image

--- a/app/views/main/dinner.html.erb
+++ b/app/views/main/dinner.html.erb
@@ -130,7 +130,7 @@
 
   <div class="text-center">
 
-<%= image_tag 'special.jpg', class: 'img-fluid' %>
+<%# image_tag 'special.jpg', class: 'img-fluid' %>
 
 </div>
 
