fixed about me carousel taller

--- a/app/views/main/about.html.erb
+++ b/app/views/main/about.html.erb
@@ -1,12 +1,22 @@
 <h1 class="menu-title">Our Story</h1>
 
 <div class="text-center">
-<h3>Benjamin Lemus and his brother Jacob grew up in Linda Vista Guatemala, the sons of Hector and Delia Lemus. Benjamin came to America in 1996, and his brother jacob, earlier in 1990. They have worked in the restaurant industry since arriving. Jacob Lemus opened his first restaurant, The City Cafe Diner with Lee Epstein eleven years ago in Chattanooga. The three partners decided it was time to launch a new concept here in the rapidly growing city.</h3></br>
+<h3>Benjamin Lemus and his brother Jacob grew up in Linda Vista Guatemala, the sons of Hector and Delia Lemus. Benjamin came to America in 1996, and his brother Jacob, earlier in 1990. They have worked in the restaurant industry since arriving. Jacob Lemus opened his first restaurant, The City Cafe Diner with Lee Epstein eleven years ago on Lee Highway, Mr. Epstein has had an extensive career in running restaurants from Georgia, to New York, and back to Tennessee. After a successful run with the City Cafe Diners, Jacob and Lee decided it was time to launch a new concept here in the rapidly growing city, and brought Benjamin on board.
+</h3></br>
 
-<h3>Benjamin and Jacob along with their partner Lee opened the Mayan Kitchen in January of 2018. They have brought forth recipes stemming from deep within their families culture. You will find some selections at our restaurant that you can only find in certain parts of Latin America. With a hand-crafted interior and a diverse, flavorful cuisine, The Mayan Kitchen is a testament to original concepts being brought to the forefront of modern culture. </h3></br>
+<h3>The three opened the Mayan Kitchen in January of 2018. They have brought forth recipes stemming from deep within their families culture. You will find some selections at our restaurant that you can only find in certain parts of Latin America. With a hand-crafted interior and a diverse, flavorful cuisine, The Mayan Kitchen is a testament to original concepts being brought to the forefront of modern culture.
+</h3></br>
 
-<h3>You can find The City Cafe Diners all over Chattanooga, from the downtown location on MLK boulevard, to Lee Highway in Cleveland. The diner boasts a MASSIVE menu with over 50+ options to choose from. </h3></br>
+<h3>You can find The City Cafe Diners all over Chattanooga, from the downtown location on MLK boulevard, to Lee Highway and Cleveland. The City Cafe Diner boasts a MASSIVE menu with over 350+ options to choose from, regarded by some as one of the best places to eat in the southeast. 
+</h3></br>
 
-<h3>We hope you will join us for your next meal, and we thank you for dining with us.</h3> 
-</h3>
+<h3>Mr. Epstein along with the Lemus brothers truly appreciate your feedback when dining at any of their establishments. They have worked very hard to bring Chattanooga the 5-Star experiences they create. 
+</h3> 
+</br>
+
+<h3>As always, we hope you will join us for your next meal, and we thank you for dining with us.
+</h3> 
+</br>
+
+
 </div>
