widened top photos

--- a/app/views/main/lunch.html.erb
+++ b/app/views/main/lunch.html.erb
@@ -11,7 +11,7 @@
   <div class="text-center">
 
 
-<%= image_tag 'lunchs.jpg', class: 'menu-photo' %>
+<%= image_tag 'lunchs.jpg', class: 'top-menu' %>
 
 </div>
 
