--- a/app/views/main/appetizer.html.erb
+++ b/app/views/main/appetizer.html.erb
@@ -11,7 +11,7 @@
   <div class="text-center">
 
 
-<%= image_tag 'appetizer.jpg', class: 'img-fluid' %>
+<%= image_tag 'appetizer.jpg', class: 'top-menu' %>
 
 </div>
 
