--- a/app/views/main/brunch.html.erb
+++ b/app/views/main/brunch.html.erb
@@ -10,7 +10,7 @@
 
 <div class="text-center">
 
-<%= image_tag 'egg.jpg', class: 'img-fluid' %>
+<%= image_tag 'egg.jpg', class: 'top-menu' %>
 
 </div>
 
