--- a/app/views/main/dessert.html.erb
+++ b/app/views/main/dessert.html.erb
@@ -7,7 +7,7 @@
 
   <div class="text-center">
 
-<%= image_tag 'dessert.jpg', class: 'img-fluid' %>
+<%= image_tag 'dessert.jpg', class: 'top-menu' %>
 
 </div>
 
