--- a/app/views/main/dinner.html.erb
+++ b/app/views/main/dinner.html.erb
@@ -6,7 +6,7 @@
 
   <div class="text-center">
 
-<%= image_tag 'steak.jpg', class: 'img-fluid' %>
+<%= image_tag 'steak.jpg', class: 'top-menu', id: 'top-menu' %>
 
 </div>
 
@@ -138,7 +138,7 @@
 
   <div class="text-center">
 
-<%= image_tag 'fajita.jpg', class: 'img-fluid' %>
+<%# image_tag 'fajita.jpg', class: 'img-fluid' %>
 
 </div>
 
@@ -187,7 +187,7 @@
 
   <div class="text-center">
 
-<%= image_tag 'taco.jpg', class: 'img-fluid' %>
+<%# image_tag 'taco.jpg', class: 'img-fluid' %>
 
 </div>
 
