--- a/app/views/main/tequila.html.erb
+++ b/app/views/main/tequila.html.erb
@@ -8,7 +8,7 @@
   <div class="text-center">
 
 
-<%= image_tag 'tequila.jpg', class: 'img-fluid' %>
+<%= image_tag 'tequila.jpg', class: 'top-menu' %>
 
 </div>
 
