--- a/app/views/main/about.html.erb
+++ b/app/views/main/about.html.erb
@@ -4,6 +4,10 @@
 <h3>Benjamin Lemus and his brother Jacob grew up in Linda Vista Guatemala, the sons of Hector and Delia Lemus. Benjamin came to America in 1996, and his brother Jacob, earlier in 1990. They have worked in the restaurant industry since arriving. Jacob Lemus opened his first restaurant, The City Cafe Diner with Lee Epstein eleven years ago on Lee Highway. Mr. Epstein has had an extensive career in running restaurants from Georgia, to New York, and back to Tennessee. After a successful run with the City Cafe Diners, Jacob and Lee decided it was time to launch a new concept here in the rapidly growing city, and brought Benjamin on board.
 </h3></br>
 
+<div class="text-center">
+	<%= image_tag 'ben.png', class: 'menu-photo' %>
+</div></br>
+
 <h3>The three opened the Mayan Kitchen in January of 2018. They have brought forth recipes stemming from deep within their families culture. You will find some selections at our restaurant that you can only find in certain parts of Latin America. With a hand-crafted interior and a diverse, flavorful cuisine, The Mayan Kitchen is a testament to original concepts being brought to the forefront of modern culture.
 </h3></br>
 
