--- a/app/views/main/contact.html.erb
+++ b/app/views/main/contact.html.erb
@@ -1,5 +1,7 @@
 <h1 class="menu-title"> Contact Us</h1>
 
+<div class="text-center">
+</div>
 
 
 <div class="row">
@@ -26,9 +28,9 @@ Chattanooga, TN 37402</p>
           <p class="card-title">Monday - Thurday</p>
           <p class="card-text">11AM - 10PM</p>
           <p class="card-title">Friday</p>
-          <p class="card-text">11AM - 12AM</p>
+          <p class="card-text">11AM - 11PM</p>
           <p class="card-title">Saturday</p>
-          <p class="card-text">9AM - 12AM</p>
+          <p class="card-text">9AM - 11PM</p>
           <p class="card-title">Sunday</p>
           <p class="card-text">9AM - 10PM</p>
 
