removed drink photos

--- a/app/views/main/tequila.html.erb
+++ b/app/views/main/tequila.html.erb
@@ -143,7 +143,7 @@
   <div class="text-center">
 
 
-<%= image_tag 'spirit.jpg', class: 'img-fluid' %>
+<%# image_tag 'spirit.jpg', class: 'img-fluid' %>
 
 </div>
 
@@ -152,7 +152,7 @@
   <div class="text-center">
 
 
-<%= image_tag 'vodka.jpg', class: 'img-fluid' %>
+<%# image_tag 'vodka.jpg', class: 'img-fluid' %>
 
 </div>
 
@@ -176,7 +176,7 @@
   <div class="text-center">
 
 
-<%= image_tag 'rum.jpg', class: 'img-fluid' %>
+<%# image_tag 'rum.jpg', class: 'img-fluid' %>
 
 </div>
 
@@ -200,7 +200,7 @@
 
   <div class="text-center">
 
-<%= image_tag 'gin.jpg', class: 'img-fluid' %>
+<%# image_tag 'gin.jpg', class: 'img-fluid' %>
 
 </div>
 
@@ -225,7 +225,7 @@
   <div class="text-center">
 
 
-<%= image_tag 'whiskey.jpg', class: 'img-fluid' %>
+<%# image_tag 'whiskey.jpg', class: 'img-fluid' %>
 
 </div>
 
@@ -249,7 +249,7 @@
 
   <div class="text-center">
 
-<%= image_tag 'scotch.jpg', class: 'img-fluid' %>
+<%# image_tag 'scotch.jpg', class: 'img-fluid' %>
 
 </div>
 
@@ -293,7 +293,7 @@
   <div class="text-center">
 
 
-<%= image_tag 'beer.jpg', class: 'img-fluid' %>
+<%# image_tag 'beer.jpg', class: 'img-fluid' %>
 
 </div>
 
@@ -354,7 +354,7 @@
 
   <div class="text-center">
 
-<%= image_tag 'michelada.jpg', class: 'menu-photo' %>
+<%# image_tag 'michelada.jpg', class: 'menu-photo' %>
 
 </div>
 
@@ -365,7 +365,7 @@
   <div class="text-center">
 
 
-<%= image_tag 'wine.jpg', class: 'img-fluid' %>
+<%# image_tag 'wine.jpg', class: 'img-fluid' %>
 
 </div>
 
