added contact form

--- a/app/views/main/contact.html.erb
+++ b/app/views/main/contact.html.erb
@@ -1,6 +1,7 @@
 <h1 class="menu-title"> Contact Us</h1>
 
 <div class="text-center">
+<script type="text/javascript" src="https://form.jotform.com/jsform/82188889368177"></script>
 </div>
 
 
