--- a/app/views/main/contact.html.erb
+++ b/app/views/main/contact.html.erb
@@ -1,6 +1,17 @@
 <h1 class="menu-title"> Contact Us</h1>
 
 <div class="text-center">
+<!-- Do not change the code! -->
+<a id="foxyform_embed_link_932614" href="http://www.foxyform.com/">foxyform</a>
+<script type="text/javascript">
+(function(d, t){
+   var g = d.createElement(t),
+       s = d.getElementsByTagName(t)[0];
+   g.src = "http://www.foxyform.com/js.php?id=932614&sec_hash=f22cf9d67b7&width=350px";
+   s.parentNode.insertBefore(g, s);
+}(document, "script"));
+</script>
+<!-- Do not change the code! -->
 </div>
 
 
