widened contact form

--- a/app/views/main/contact.html.erb
+++ b/app/views/main/contact.html.erb
@@ -7,7 +7,7 @@
 (function(d, t){
    var g = d.createElement(t),
        s = d.getElementsByTagName(t)[0];
-   g.src = "http://www.foxyform.com/js.php?id=932614&sec_hash=f22cf9d67b7&width=350px";
+   g.src = "http://www.foxyform.com/js.php?id=932614&sec_hash=f22cf9d67b7&width=100%";
    s.parentNode.insertBefore(g, s);
 }(document, "script"));
 </script>
