--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -11,7 +11,7 @@
 <div class="row">
 
     <div class="col-sm-3">
-                <h4 class="menu-head">Visit Us!</h4>
+                <h4 class="footer-head text-center">Visit Us!</h4>
 
       <div class="card text-center">
         <div class="card block">
@@ -34,7 +34,8 @@ Chattanooga, TN 37402</p>
     <div class="col-sm-3">
       <div class="card text-center">
         <div class="card block">
-          <h4 class="menu-head">Hours</h4>
+
+          <h4 class="footer-head">Hours</h4>
           <h5>Monday - Thursday</h5>
           <h6>11AM - 11PM</h6>
           <h5 class="hours">Friday</h5>
@@ -51,11 +52,11 @@ Chattanooga, TN 37402</p>
     <div class="col-sm-3">
       <div class="card text-center">
         <div class="card block">
-          <h4 class="menu-head">Call Us!</h4>
+          <h4 class="footer-head">Call Us!</h4>
           <a class="btn btn-warning btn-xlg" href="tel:423-682-7835" style="padding:15px;">
           <span class="glyphicon glyphicon-earphone" style="padding-left:0px; padding-right:0px;"></span>423-682-7835
           </a>
-          <h4 class="menu-head">Join Our Team!</h4>
+          <h4 class="footer-head">Join Our Team!</h4>
           <%= link_to "Apply Now", apply_path, class: "btn btn-warning" %>
 
 
@@ -67,7 +68,7 @@ Chattanooga, TN 37402</p>
     <div class="col-sm-3">
       <div class="card text-center">
         <div class="card block">
-          <h4 class="menu-head">Follow Us!</h4>
+          <h4 class="footer-head">Follow Us!</h4>
     <div class="container">
     <a href="https://www.facebook.com/MayanKitchenChatt/" target="_blank">
       <%= image_tag 'facebook.png' %>
@@ -94,7 +95,7 @@ Chattanooga, TN 37402</p>
     <div class="col-sm-10">
 
 
-<h1 class="menu-head">Try one of our Partner restaurants!</h1>
+<h1 class="footer-head text-center">Try one of our Partner restaurants!</h1>
 
 </div>
 </div>
